--- a/saad-portfolio/package.json
+++ b/saad-portfolio/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-email/components": "^0.0.29",
     "framer-motion": "^11.12.0",
     "motion": "^11.12.0",
     "react": "^18.3.1",
