installed and added scripts for gh-pages

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://shjcc.github.io/saad.github.io",
   "name": "saad-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint saad-portfolio",
@@ -17,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-email/components": "^0.0.29",
     "framer-motion": "^11.12.0",
+    "gh-pages": "^6.2.0",
     "motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
