testing gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shjcc.github.io/saad.github.io/",
+  "homepage": "https://shjcc.github.io/",
   "name": "saad-portfolio",
   "private": true,
   "version": "0.0.0",
