--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.saad-hussain.com/",
+  "homepage": "https://shjcc.github.io/saad-portfolio",
   "name": "saad-portfolio",
   "private": true,
   "version": "0.0.0",
